# tagged-tree

./: .pre-commit-config.yaml  Cargo.toml  README.md
src/: lib.rs
src/iterators/: breadth_first.rs  depth_first.rs  mod.rs
tests/: basic.rs  breadth_first_traversal.rs  depth_first_traversal.rs
