[package]
name = "tagged-tree"
authors = ["person93 <person93.person93@gmail.com>"]
version = "0.4.0"
edition = "2018"
description = "A tree-like data structure where the values are tagged."
license = "MIT"
repository = "https://github.com/Person-93/tagged-tree"
documentation = "https://docs.rs/tagged-tree/"

[dependencies.serde]
version = "1.0.130"
default-features = false
optional = true
features = ["std", "derive"]

[dev-dependencies]
doc-comment = "0.3.3"
duplicate = "0.3.0"
mockall = "0.10.2"
